# tokio-im

./: .env  Cargo.toml  README.md  build.rs
protos/: im.proto
src/: lib.rs  main.rs  model.rs  test.rs
src/common/: io_utils.rs  mod.rs  user_manager.rs
src/model/: message_type.rs  user.rs
src/net/: message_codec.rs  mod.rs  protobuf_codec.rs
src/service/: user_service.rs
src/utils/: io_utils.rs
