[package]
name = "tokio-im"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
prost = "0.13"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.13"
